Kubernetes-prod/Kubernetes-manifest/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowhow-ui
  namespace: prod-knowhow
  labels:
    app: knowhow-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knowhow-ui
  template:
    metadata:
      labels:
        app: knowhow-ui
    spec:
      # initContainers:
      # - name: init-mongodb
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      # - name: init-knowhow-ui
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup knowhow-ui-knowhow.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for knowhow-ui; sleep 2; done"]
      containers:
      - name: knowhow-ui
        image: speedtools.azurecr.io/knowhow-ui:9.4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        # - containerPort: 443
        resources:
          requests:
            memory: "32Mi"
            cpu: "0.1"
          limits:
            memory: "124Mi"
            cpu: "0.5"
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
        envFrom:
          - configMapRef:
              name: knowhow-config
---
apiVersion: v1
kind: Service
metadata:
  name: knowhow-ui
  namespace: prod-knowhow
spec:
  selector:
    app: knowhow-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    # - name: https  # Name for the HTTPS port
    #   protocol: TCP
    #   port: 443
    #   targetPort: 443

---
